[metadata]
name = facehash
version = 0.0.1
author = Alexander Becker
description = Hash data to realistic faces :)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = ==3.7.*
install_requires =
    wheel
    click
    requests
    torch==1.7.1+cu110
    torchvision==0.8.2+cu110
    Pillow==9.2.0

[options.packages.find]
where = src

[options.package_data]
torch_utils.ops =
    *.cpp
    *.cu
    *.h

[options.entry_points]
console_scripts =
    facehash = facehash.facehash:main
